beta_1.3